# ffmpeg

android/pkgconfig/arm64-v8a/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android/pkgconfig/armeabi-v7a/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android/pkgconfig/x86/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
android/pkgconfig/x86_64/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg01/app/: CMakeLists.txt  build.gradle
ffmpeg01/app/src/androidTest/java/com/xhhold/tool/ffmpeg01/: ExampleInstrumentedTest.kt
ffmpeg01/app/src/main/: AndroidManifest.xml
ffmpeg01/app/src/main/java/com/xhhold/tool/ffmpeg01/: MainActivity.kt
ffmpeg01/app/src/main/jni/: main.cpp
ffmpeg01/app/src/main/res/layout/: activity_main.xml
ffmpeg01/app/src/main/res/values/: strings.xml
ffmpeg01/app/src/test/java/com/xhhold/tool/ffmpeg01/: ExampleUnitTest.kt
ffmpeg01/gradle/wrapper/: gradle-wrapper.properties
